<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ScrollView
        android:id="@+id/scrollviewSearchModal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#805E5E5E"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/namePokemon_input_layout"
                style="@style/MaterialTextInputLayoutAppearanceOnDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="24dp"
                android:gravity="center_horizontal"
                android:hint="@string/pokemon_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNamePokemon"
                    style="@style/MaterialTextInputEditTextAppearanceOnDark"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/ownerCard"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/namePokemon_input_layout">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/labelOwner"
                        style="@style/TextViewModal"
                        android:text="Only My Card"/>

                    <CheckBox
                        android:id="@+id/onlyMyCards"
                        style="@style/CheckBoxModalOwner"
                        android:layout_toEndOf="@id/labelOwner"/>
                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/selectEnergy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ownerCard"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/leftGroupeCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0.5">

                    <RelativeLayout
                        android:id="@+id/planteGroupe"
                        style="@style/GroupeRelativeLayoutModal">

                        <ImageView
                            android:id="@+id/logoPlante"
                            style="@style/ImgViewModal"
                            android:contentDescription="@string/grass"
                            android:src="@drawable/grass_logo" />

                        <TextView
                            android:id="@+id/labelPlante"
                            style="@style/TextViewModal"
                            android:layout_toEndOf="@+id/logoPlante"
                            android:text="@string/grass" />

                        <CheckBox
                            android:id="@+id/checkboxPlante"
                            style="@style/CheckBoxModal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/elecGroupe"
                        style="@style/GroupeRelativeLayoutModal"
                        android:layout_below="@+id/planteGroupe">

                        <ImageView
                            android:id="@+id/logoElec"
                            style="@style/ImgViewModal"
                            android:contentDescription="@string/lightning"
                            android:src="@drawable/lightning_logo" />

                        <TextView
                            android:id="@+id/labelElec"
                            style="@style/TextViewModal"
                            android:layout_toEndOf="@+id/logoElec"
                            android:text="@string/lightning" />

                        <CheckBox
                            android:id="@+id/checkboxElec"
                            style="@style/CheckBoxModal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/fireGroupe"
                        style="@style/GroupeRelativeLayoutModal"
                        android:layout_below="@+id/elecGroupe">

                        <ImageView
                            android:id="@+id/logoFire"
                            style="@style/ImgViewModal"
                            android:contentDescription="@string/fire"
                            android:src="@drawable/fire_logo" />

                        <TextView
                            android:id="@+id/labelFire"
                            style="@style/TextViewModal"
                            android:layout_toEndOf="@+id/logoFire"
                            android:text="@string/fire" />

                        <CheckBox
                            android:id="@+id/checkboxFire"
                            style="@style/CheckBoxModal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/psyGroupe"
                        style="@style/GroupeRelativeLayoutModal"
                        android:layout_below="@+id/fireGroupe">

                        <ImageView
                            android:id="@+id/logoPsy"
                            style="@style/ImgViewModal"
                            android:contentDescription="@string/psychic"
                            android:src="@drawable/psychic_logo" />

                        <TextView
                            android:id="@+id/labelPsy"
                            style="@style/TextViewModal"
                            android:layout_toEndOf="@+id/logoPsy"
                            android:text="@string/psychic" />

                        <CheckBox
                            android:id="@+id/checkboxPsy"
                            style="@style/CheckBoxModal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/steelGroupe"
                        style="@style/GroupeRelativeLayoutModal"
                        android:layout_below="@+id/psyGroupe">

                        <ImageView
                            android:id="@+id/logoSteel"
                            style="@style/ImgViewModal"
                            android:contentDescription="@string/steel"
                            android:src="@drawable/metal_logo" />

                        <TextView
                            android:id="@+id/labelSteel"
                            style="@style/TextViewModal"
                            android:layout_toEndOf="@+id/logoSteel"
                            android:text="@string/steel" />

                        <CheckBox
                            android:id="@+id/checkboxSteel"
                            style="@style/CheckBoxModal" />
                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rightGroupeCheckbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="0.5">

                    <RelativeLayout
                        android:id="@+id/darkGroupe"
                        style="@style/GroupeRelativeLayoutModal">

                        <ImageView
                            android:id="@+id/logoDark"
                            style="@style/ImgViewModal"
                            android:contentDescription="@string/darkness"
                            android:src="@drawable/darkness_logo" />

                        <TextView
                            android:id="@+id/labelDark"
                            style="@style/TextViewModal"
                            android:layout_toEndOf="@+id/logoDark"
                            android:text="@string/darkness" />

                        <CheckBox
                            android:id="@+id/checkboxDark"
                            style="@style/CheckBoxModal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/fairyGroupe"
                        style="@style/GroupeRelativeLayoutModal"
                        android:layout_below="@+id/darkGroupe"
                        android:background="@drawable/rounded_button_action">

                        <ImageView
                            android:id="@+id/logoFairy"
                            style="@style/ImgViewModal"
                            android:contentDescription="@string/fairy"
                            android:src="@drawable/fairy_logo" />

                        <TextView
                            android:id="@+id/labelFairy"
                            style="@style/TextViewModal"
                            android:layout_toEndOf="@+id/logoFairy"
                            android:text="@string/fairy" />

                        <CheckBox
                            android:id="@+id/checkboxFairy"
                            style="@style/CheckBoxModal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/dragonGroupe"
                        style="@style/GroupeRelativeLayoutModal"
                        android:layout_below="@id/fairyGroupe"
                        android:background="@drawable/rounded_button_action">

                        <ImageView
                            android:id="@+id/logoDragon"
                            style="@style/ImgViewModal"
                            android:contentDescription="@string/dragon"
                            android:src="@drawable/dragon_logo" />

                        <TextView
                            android:id="@+id/labelDragon"
                            style="@style/TextViewModal"
                            android:layout_toEndOf="@+id/logoDragon"
                            android:text="@string/dragon" />

                        <CheckBox
                            android:id="@+id/checkboxDragon"
                            style="@style/CheckBoxModal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/waterGroupe"
                        style="@style/GroupeRelativeLayoutModal"
                        android:layout_below="@+id/dragonGroupe"
                        android:background="@drawable/rounded_button_action">

                        <ImageView
                            android:id="@+id/logoWater"
                            style="@style/ImgViewModal"
                            android:contentDescription="@string/water"
                            android:src="@drawable/water_logo" />

                        <TextView
                            android:id="@+id/labelWater"
                            style="@style/TextViewModal"
                            android:layout_toEndOf="@+id/logoWater"
                            android:text="@string/water" />

                        <CheckBox
                            android:id="@+id/checkboxWater"
                            style="@style/CheckBoxModal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/fightingGroupe"
                        style="@style/GroupeRelativeLayoutModal"
                        android:layout_below="@+id/waterGroupe"
                        android:background="@drawable/rounded_button_action">

                        <ImageView
                            android:id="@+id/logoFighting"
                            style="@style/ImgViewModal"
                            android:contentDescription="@string/fighting"
                            android:src="@drawable/fighting_logo" />

                        <TextView
                            android:id="@+id/labelFighting"
                            style="@style/TextViewModal"
                            android:layout_toEndOf="@+id/logoFighting"
                            android:text="@string/fighting" />

                        <CheckBox
                            android:id="@+id/checkboxFighting"
                            style="@style/CheckBoxModal" />
                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/incoloreGroupe"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/selectEnergy"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_button_action">

                <ImageView
                    android:id="@+id/logoIncolore"
                    style="@style/ImgViewModal"
                    android:contentDescription="@string/colorless"
                    android:src="@drawable/colorless_logo" />

                <TextView
                    android:id="@+id/labelIncolore"
                    style="@style/TextViewModal"
                    android:layout_toEndOf="@+id/logoIncolore"
                    android:text="@string/colorless" />

                <CheckBox
                    android:id="@+id/checkboxIncolor"
                    style="@style/CheckBoxModal" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/validateFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/valider" />


</RelativeLayout>